--- a/pm_projekt/src/Main.css
+++ b/pm_projekt/src/Main.css
@@ -44,8 +44,13 @@ body {
   font-size: 16px;
 }
 
-.nav-icon {
+.nav-button {
   margin-right: 10px;
+}
+
+.nav-icon {
+  width: 48px;
+  height: 48px;
 }
 
 .main-content {
@@ -161,6 +166,11 @@ th {
   height: 24px;
 }
 
+.logout-icon {
+  width: 24px;
+  height: 24px;
+}
+
 .add-icon:hover {
   background-color: #dbdbdb;
   border-radius: 5px;
@@ -169,22 +179,23 @@ th {
 /*---------------------------------------UPRATOVANIE---------------*/
 
 .table-container {
-  width: 100%; 
-  height: 200px; 
+  width: 100%;
+  height: 200px;
   overflow-y: auto; /*da sa scrollovta*/
 }
 
 table {
-  width: 100%; 
-  border-collapse: collapse; 
+  width: 100%;
+  border-collapse: collapse;
 }
 
-th, td {
-  padding: 10px; 
-  text-align: left; 
+th,
+td {
+  padding: 10px;
+  text-align: left;
   border: 1px solid #ddd;
 }
 
 th {
-  background-color: #f2f2f2; 
+  background-color: #f2f2f2;
 }
